[tool.poetry]
name = "python-web"
version = "0.1.0"
description = ""
authors = ["Grenui92 <grenui92@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
help_you = "main:start"